--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div id="nav-links" class="nav-div">
                 <a href="#home" class="nav-link">HOME</a>
-                <a href="#about" class="nav-link">ABOUT ME</a>
+                <a href="#about" class="nav-link">ABOUT</a>
                 <a href="#projects" class="nav-link">PROJECTS</a>
                 <a href="#contacts" class="nav-link">CONTACT</a>
             </div>
